# ohpc

components/perf-tools/geopm/SPECS/: geopm.spec
components/perf-tools/msr-safe/SOURCES/: 0001-Correcting-hash_for_each_possible-function.-Fixes-41.patch  0001-Make-msr_batch_op-struct-wmask-field-an-input-parame.patch  0002-Adding-slurm-spank-plugin-to-enable-MSR-save-restore.patch  0003-Add-After-network.target-to-systemd-unit.patch  0004-In-msrsave-r-FILE-if-writing-an-MSR-value-fails-warn.patch
components/perf-tools/msr-safe/SPECS/: msr-safe.spec
components/runtimes/geopm/SOURCES/: geopm-fix-overflow.patch  geopm-remove-uid-from-env-shmkey.patch
components/runtimes/geopm/SPECS/: geopm.spec
docs/recipes/install/centos7/x86_64/warewulf/pbspro/: steps.tex
docs/recipes/install/centos7/x86_64/warewulf/slurm/: steps.tex
docs/recipes/install/centos7/x86_64/xcat/slurm/: steps.tex
docs/recipes/install/common/: geopm.tex  ohpc-doc.sty
docs/recipes/install/sles12/x86_64/xcat/slurm/: steps.tex
tests/: Makefile.am  configure.ac
tests/perf-tools/geopm/: geopm-prun
tests/perf-tools/geopm/ohpc-tests/: test_mpi_families
tests/perf-tools/geopm/tests/: Makefile.am  geopm_test_0.sh  rm_execution  test_module
tests/runtimes/geopm/: .gitignore  configure.ac
tests/runtimes/geopm/ohpc-tests/: test_mpi_families
tests/runtimes/geopm/tests/: Makefile.am  rm_execution  test_module  tutorial_4.c  tutorial_policy.json
